--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -36,8 +36,21 @@ body {
     background-repeat: no-repeat;
     background-size: contain;
     position: relative;
-    width: 540px;
-    /* height: 540px; */
+    max-width: 628px;
+    width: 100%;
+    height: 351px;
+}
+
+.container1 h2 {
+    position: absolute;
+    bottom: 55px;
+    text-align: right;
+}
+
+.container1 p {
+    position: absolute;
+    bottom: 20px;
+    text-align: right;
 }
 
 figure img {
