--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -29,7 +29,7 @@ body {
 
 .box1 {
     width: 100%;
-    height: 100%;
+    height: 200px;
 }
 
 .container1 {
@@ -64,12 +64,6 @@ body {
     width: 100%;
     max-width: 650px;
     word-break: break-word;
-}
-
-.lado {
-    box-sizing: content-box;
-    width: 100%;
-    padding: 5px;
 }
 
 figure img {
