--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -79,17 +79,15 @@ a {
 }
 
 header {
-    padding-left: 20px;
-    position: sticky;
+    display: flex;
+    flex-wrap: nowrap;
     top: 0;
     z-index: 100;
+    padding-left: 20px;
+    position: sticky;
     background-color: rgb(167, 213, 255);
 }
 
-header nav{
-    display: flex;
-    justify-content: space-evenly;
-}
 
 footer {
     background-color:  black;
